# crispy-waffle

./: .env.example  README.md  docker-compose.yaml
api/: Dockerfile  pom.xml
api/src/main/java/cl/ubiobio/muebleria/: MuebleriaApplication.java
api/src/main/java/cl/ubiobio/muebleria/config/: DataLoader.java  SecurityConfig.java
api/src/main/java/cl/ubiobio/muebleria/controllers/: AuthController.java  MuebleController.java  OrdenController.java  UsuarioController.java  VarianteAdicionalController.java
api/src/main/java/cl/ubiobio/muebleria/dto/: ActualizarRolRequestDTO.java  AuthResponseDTO.java  CrearOrdenRequestDTO.java  DetalleOrdenDTO.java  DetalleRequestDTO.java  LoginRequestDTO.java  MuebleDTO.java  MuebleRequestDTO.java  OrdenDTO.java  RegisterRequestDTO.java  UsuarioDTO.java  VarianteAdicionalDTO.java  VarianteAdicionalRequestDTO.java  VarianteAplicadaDTO.java
api/src/main/java/cl/ubiobio/muebleria/enums/: Rol.java  (+3 more)
api/src/main/resources/: application.properties
api/src/test/java/cl/ubiobio/muebleria/: MuebleriaApplicationTests.java
api/src/test/resources/: application-test.properties
frontend/: Dockerfile  app.py  pyproject.toml
frontend/templates/: base.html  catalogo.html  index.html
frontend/templates/admin/: dashboard.html  usuarios.html  usuarios_partial.html
frontend/templates/auth/: login.html  register.html
frontend/templates/muebles/: form.html  list.html  list_partial.html
frontend/templates/ordenes/: detail.html  detail_partial.html  form.html  list.html
frontend/templates/variantes/: form.html  list.html  list_partial.html
(+28 files in other folders)
